# numpy-rust

./: .gitignore  BENCHMARKS.md  Cargo.toml  DEVELOPMENT.md  README.md
benches/: array_benchmarks.rs  numpy_comparison.rs
demo/: README.md  package-lock.json  package.json  vite.config.ts
demo/public/: index.html
demo/src/: App.tsx
demo/src/components/: BenchmarkControls.tsx  BenchmarkHistory.tsx  BenchmarkRunner.tsx  BenchmarkSidebar.tsx  GPUInfo.tsx  ResultsDisplay.tsx
demo/src/data/: testHierarchy.ts
demo/src/styles/: app.css
demo/src/types/: benchmark.ts
demo/src/workers/: benchmark.worker.ts
docs/: plan.md  smart-dispatch.md
docs/plans/: webgpu.md
docs/reports/: 251109-0732-performance.md  additional-optimizations.md  advanced-matrix-optimizations.md  gpu-acceleration-plan.md  optimizations-implemented.md  performance-optimization-plan.md
examples/: basic_operations.rs  linear_algebra.rs  signal_processing.rs  statistics.rs
src/: array.rs  error.rs  fft.rs  fft_full.rs.bak  lib.rs  linalg.rs  linalg_full.rs.bak  math.rs  random.rs  random_full.rs.bak  sorting.rs  stats.rs  wasm.rs
src/gpu/: buffer.rs  context.rs  dispatch.rs  error.rs  mod.rs  pipeline.rs
src/gpu/kernels/: elementwise.wgsl  matmul.wgsl  mod.rs  reduction.wgsl
src/gpu/ops/: elementwise.rs  matmul.rs  mod.rs
tests/: gpu_integration_tests.rs
