[package]
name = "numpy_rust"
version = "0.1.0"
edition = "2021"
authors = ["NumPy Rust Contributors"]
description = "A comprehensive Rust port of NumPy, built on ndarray"
license = "Apache-2.0"
repository = "https://github.com/boxabirds/numpy-rust"
keywords = ["numpy", "ndarray", "scientific", "numerical", "linear-algebra"]
categories = ["science", "mathematics"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
ndarray = { version = "0.16", features = ["rayon", "serde"] }
ndarray-linalg = { version = "0.16", optional = true }
ndarray-rand = "0.15"
ndarray-stats = "0.6"
num-traits = "0.2"
num-complex = "0.4"
rand = "0.8"
rand_distr = "0.4"
rayon = "1.10"
thiserror = "1.0"
rustfft = "6.2"
once_cell = "1.21"

# GPU dependencies (optional)
wgpu = { version = "27", optional = true }
bytemuck = { version = "1.14", optional = true, features = ["derive"] }
pollster = { version = "0.3", optional = true }
futures = { version = "0.3", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
web-sys = { version = "0.3", optional = true, features = ["Window", "Navigator", "Gpu"] }
console_error_panic_hook = { version = "0.1", optional = true }
js-sys = { version = "0.3", optional = true }
getrandom = { version = "0.2", features = ["js"] }
futures = { version = "0.3", optional = true }

[features]
default = []
linalg = ["ndarray-linalg"]
gpu = ["wgpu", "bytemuck", "pollster", "futures"]
gpu-web = ["gpu", "wasm-bindgen", "wasm-bindgen-futures", "web-sys", "console_error_panic_hook", "js-sys"]

[lib]
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
approx = "0.5"
criterion = "0.5"
pyo3 = "0.22"
numpy = "0.22"

[[bench]]
name = "array_benchmarks"
harness = false

[[bench]]
name = "numpy_comparison"
harness = false
